# dnet

./: .env.example  .gitignore  .gitmodules  .hostfile.example  .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  main.py  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/actions/cleanup-servers/: action.yml
.github/actions/setup-env/: action.yml
.github/actions/setup-ssh/: action.yml
.github/actions/start-api/: action.yml
.github/actions/start-shard/: action.yml
.github/workflows/: ci.yml  cp-integration-tests.yml  integration-tests.yml  matrix-checks.yml  test-static-discovery.yml  tests-macos.yml
docs/design/: context-parallelism.md
logs/: .gitignore
misc/: dnet.art
scripts/: cp_utils.py  download_model.py  generate_env_example.py  generate_protos.py  needle_in_haystack.py  prepare_cp_model.py  prepare_model.py  repack_windows.py  run_two_shards_one_api.sh  stress_test_cp.py
src/: repl.py
src/cli/: api.py  shard.py
src/cli/cli_new/: api.py  shard.py
src/csrc/: kv_cache.cpp
src/dnet/: config.py  tui.py
src/dnet/api/: catalog.py  cluster.py  config.py  http_api.py  inference.py  load_helpers.py  mcp_handler.py  model_manager.py  models.py  utils.py
src/dnet/api/grpc_servicer/: server.py  servicer.py
src/dnet/api/strategies/: base.py  context_parallel.py  ring.py
src/dnet/compression/: utils.py  wire.py
src/dnet/core/: observability.py  stream_manager.py  topology.py
src/dnet/core/codec/: tensor.py
src/dnet/core/cp/: __init__.py  cp_kv_sync.py  heuristics.py  merge_attention.py  ring_comm.py  sharding.py
src/dnet/core/decoding/: config.py  sampler.py
src/dnet/core/interfaces/: topology.py
src/dnet/core/memory/: memory_pool.py  weight_cache.py
src/dnet/core/models/: __init__.py  base.py  cp_layers.py  deepseek_v2.py  glm4.py  gpt_oss.py  llama.py  olmo3.py  qwen3.py  qwen3_moe.py
src/dnet/core/network/: create.py  netcfg.py
src/dnet/core/types/: messages.py  topology.py
src/dnet/perf/: __init__.py  bench.py  trace.py
src/dnet/perf/utils/: __init__.py  aggregator.py  aggregators.py
src/dnet/protos/: .gitignore  __init__.py  dnet.proto  dnet_cp.proto  dnet_ring.proto  shard_api_comm.proto
src/dnet/ring/: __init__.py  api_models.py  common.py  data_types.py  observability.py  weight_cache.py
src/dnet/ring/api/: api_logging.py  models.py  node.py  servicer.py  utils.py  utils_test.py
src/dnet/ring/api/new_api/: cluster.py  config.py  grpc_server.py  grpc_servicer.py  http_api.py  inference.py  model_manager.py  models.py  node.py
src/dnet/ring/api/new_api/adapters/: base.py  ring.py
src/dnet/ring/api/new_api/grpc_servicer/: servicer.py
src/dnet/ring/api/new_api/strategies/: base.py  ring.py
src/dnet/ring/model/: __init__.py  base.py  deepseek_v2.py  gpt_oss.py  llama.py  llama3.py  qwen3.py  qwen3_sparse.py
src/dnet/ring/shard/: __init__.py  attrib.py  comms.py  compute.py  config.py  models.py  node.py  prefetch.py  send.py  servicer.py  startup.py
src/dnet/ring/shard/new_shard/: codec.py  http_api.py  models.py  runtime.py  shard.py
src/dnet/ring/shard/new_shard/adapters/: base.py  ring.py
src/dnet/ring/shard/new_shard/grpc_servicer/: __init__.py  server.py  servicer.py
src/dnet/ring/shard/new_shard/policies/: __init__.py  base.py  fit_in_memory.py  offload.py  offload_memory.py
src/dnet/runtime/: sparse_attention.py
src/dnet/shard/: codec.py  config.py  http_api.py  models.py  runtime.py  shard.py
src/dnet/shard/adapters/: base.py  context_parallel.py  ring.py
src/dnet/shard/grpc_servicer/: server.py  servicer.py
src/dnet/shard/policies/: __init__.py  base.py  fit_in_memory.py  noop.py  offload.py
src/dnet/utils/: __init__.py  args.py  async_utils.py  banner.py  compression.py  grpc_config.py  latency.py  layer_manager.py  loader.py  logger.py  model.py  network.py  profile_subproc.py  repack.py  serialization.py
test/: test_kv_cache.py  test_repack.py  test_shard_repack.py  test_sparse_attention.py
tests/: conftest.py  openai_compat.py  test_api_utils.py  test_cluster_manager_head_node.py  test_layer_aware_memory_pool.py  test_layer_manager.py  test_memory_pool.py  test_model_loaders.py  test_netcfg.py  test_static_discovery.py  test_stream_manager.py  test_tensor_utils.py  test_utils_misc.py  test_utils_model_io.py  test_utils_profile_subproc.py  test_utils_repack_ops.py  test_weight_cache.py
tests/fakes/: README.md  __init__.py  api.py  discovery.py  grpc.py  models.py  mp.py  policies.py  runtime.py  shard.py  solver.py  streams.py  weight_cache.py
tests/integration/: conftest.py  test_cp_single_system.py  test_mcp_integration.py  test_model_catalog.py  test_structured_outputs_e2e.py
tests/subsystems/: test_api_grpc_server.py  test_api_http_server.py  test_cluster_manager.py  test_cp_heuristics.py  test_cp_merge.py  test_cp_ring_comm.py  test_cp_serialization.py  test_cp_sharding.py  test_inference_manager.py  test_model_manager.py  test_ring_adapter.py  test_shard.py  test_shard_activation_codec.py  test_shard_grpc_server.py  test_shard_http_server.py  test_shard_policies.py  test_shard_policy_impl.py  test_shard_runtime.py
