[project]
name = "dnet"
version = "0.1.0"
description = "Distributed Inference"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "andthattoo", email = "omer@dria.co" },
  { name = "erhant", email = "erhan@dria.co" },
  { name = "Shashank Jaiswal", email = "shashank@dria.co" },
]
keywords = [
  "Artificial Intelligence",
  "Large Language Models",
  "Apple Silicon",
  "MLX",
  "Pipeline Parallelism",
]
requires-python = ">=3.12"
dependencies = [
  "mlx",
  "mlx-lm==0.28.2",
  "numpy>=1.24.0",
  "grpcio>=1.50.0",
  "grpcio-tools>=1.50.0",
  "transformers>=4.30.0",
  "protobuf>=4.21.0",
  "huggingface-hub==0.24.0",
  "fastapi>=0.100.0",
  "hypercorn>=0.14.0",
  "pydantic>=2.0.0",
  "h2>=4.1.0",
  "mypy-protobuf>=3.0.0",
  "httpx[http2]>=0.24.0",
  "cryptography>=40.0.0",
  "distilp[solver,profiler] @ file://${PROJECT_ROOT}/lib/distilp",
  "dnet-p2p @ file://${PROJECT_ROOT}/lib/dnet-p2p/bindings/py",
]

[project.scripts]
dnet-api = "cli.api:main"
dnet-shard = "cli.shard:main"

[dependency-groups]
dev = [
  "openai>=2.6.0", # for OpenAI compatibility tests
  "pytest>=8.4.2",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
# Discover standard test module basenames everywhere
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
python_functions = ["test_"]
log_cli = true
markers = [
  "api: tests for API node components (HTTP, gRPC, managers)",
  "shard: tests for Shard node components (HTTP, gRPC, runtime, policies, ring)",
  "http: tests that exercise HTTP servers or endpoints",
  "grpc: tests that exercise gRPC servers or stubs",
  "ring: tests for the RingAdapter and ring transport",
  "runtime: tests for ShardRuntime internals",
  "policies: tests for policy planning/registry/implementations",
  "codec: tests for activation codec serialize/deserialize",
  "core: tests for core memory/cache/utils not tied to api/shard",
  "e2e: integration tests requiring live servers or multiple components",
]

[tool.ruff]
exclude = [".git", ".venv", "__pycache__", "build", "dist", "lib"]
line-length = 88                                                   # black

[tool.mypy]
python_version = "3.12"
show_error_codes = true
pretty = true
color_output = true
warn_unused_ignores = true
exclude = ["^lib/", "^tests/",  "^src/dnet/compression(/|$)", "^src/dnet/proto"]
explicit_package_bases = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
 module = [
  "distilp", "distilp.*",
  "dnet_p2p", "dnet_p2p.",
  "grpc", "grpc.*",
  "grpc_tools", "grpc_tools.",
  "huggingface_hub", "huggingface_hub.*",
  "requests",
  ]
ignore_missing_imports = true
